# snaptui

./: .releaserc.json  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: docs.yml  release.yml
docs/: .releaserc.json  docusaurus.config.ts  package.json  sidebars.ts
docs/docs/: quickstart.md
docs/src/css/: custom.css
docs/src/pages/: index.tsx
docs/static/video/: intro.webm
src/: app.rs  cli.rs  input.rs  main.rs  websocket.rs
src/app/: input_handler.rs
src/commands/: mod.rs
src/commands/client/: mod.rs  setlatency.rs  setname.rs  setvolume.rs
src/commands/group/: mod.rs  setclients.rs  setmute.rs  setname.rs  setstream.rs
src/commands/server/: getstatus.rs  mod.rs
src/core/: mod.rs
src/core/cli/: args.rs  mod.rs
src/core/input/: events.rs  handler.rs  mod.rs
src/core/websocket/: connection.rs  mod.rs
src/models/: mod.rs  status.rs
src/models/client/: mod.rs  onconnect.rs  ondisconnect.rs  onlatencychanged.rs  onnamechanged.rs  onvolumechanged.rs  setlatency.rs  setname.rs  setvolume.rs
src/models/group/: mod.rs  onmute.rs  onnamechanged.rs  onstreamchanged.rs  setclients.rs  setmute.rs  setname.rs  setstream.rs
src/models/server/: getstatus.rs  mod.rs  onupdate.rs
src/models/stream/: mod.rs  onproperties.rs  onupdate.rs
src/ui/: headers.rs  mod.rs  tabs.rs  ui.rs  utils.rs
src/ui/body/: mod.rs  tabs.rs
src/ui/body/clients/: details.rs  list.rs  mod.rs
src/ui/body/groups/: details.rs  list.rs  mod.rs
src/ui/body/streams/: details.rs  list.rs  mod.rs
src/ui/footer/: events.rs  infos.rs  mod.rs  status.rs
