[package]
name = "snaptui"
version = "0.1.0"
edition = "2021"
description = "A TUI application for monitoring Snapcast servers"
authors = ["thibault.desaules@open-sori.dev"]
license = "GPL-3.0"
repository = "https://github.com/open-sori/snaptui"

[dependencies]
tokio = { version = "1.45", features = ["full"] }
tokio-tungstenite = "0.27"
futures-util = "0.3"
tungstenite = "0.27"
ratatui = "0.29"
crossterm = "0.29"
uuid = { version = "1.17", features = ["v4"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive", "env"] }
chrono = "0.4"
validator = { version = "0.20", features = ["derive"] }