[package]
name = "snaptui"
version = "0.2.0"
edition = "2021"
description = "A TUI application for monitoring Snapcast servers"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/snaptui"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20.0"
futures-util = "0.3"
tungstenite = "0.20.0"
ratatui = "0.26.1"
crossterm = "0.27.0"
uuid = { version = "1.4", features = ["v4"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive","env"] }